--- a/index.html
+++ b/index.html
@@ -75,6 +75,27 @@
                 <!-- Work -->                 
                 <article id="musicas" class=""> 
                     <table class=""> 
+                        <h2>sonidos<br></h2> 
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/y4P1P3mxTYQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                <li> 
+                                    <a href="https://www.facebook.com/dialog/share?app_id=87741124305&href=https%3A%2F%2Fwww.youtube.com%2Fattribution_link%3Fa%3DBPJoAVM2gbk%26u%3D%252Fwatch%253Fv%253Dy4P1P3mxTYQ%2526feature%253Dshare&display=popup&redirect_uri=https%3A%2F%2Fwww.youtube.com%2Ffac" class="icon fa-share" target="_blank"><span class="label">Facebook</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://twitter.com/intent/tweet?url=https%3A//youtu.be/y4P1P3mxTYQ&text=Sumé%20-%20Sonidos%20(Original%20Mix)%20|%20Psy%20Trance&via=YouTube&related=YouTube,YouTubeTrends,YTCreators" class="icon fa-retweet" target="_blank"><span class="label">twitter</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://soundcloud.com/sumemusique/sonidos" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://open.spotify.com/artist/0H4TnrzWzIrNB5msJX62q5" class="icon fa-spotify" target="_blank"><span class="label">Spotify</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://www.youtube.com/watch?v=y4P1P3mxTYQ" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                                </li>                                 
+                                <li class=""> 
+                                    <a href="https://theartistunion.com/tracks/1cf276" class="icon fa-download" target="_blank"><span class="label">Youtube</span></a> 
+                                </li>                                 
+                            </ul></span>
                         <h2>portal<br></h2> 
                         <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/pYfBsIpm9no?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><ul class="icons" position="center" ""> 
                                 <li> 
