--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html> 
     <head> 
-        <title>SUMÉ | Site oficial</title>         
+        <title>SUMÉ</title>         
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
         <meta charset="utf-8" /> 
         <script src="assets/js/jquery.min.js"></script>         
